Right-align dropdown with flexbox (commented, has issues)

--- a/pageserve/static/style.css
+++ b/pageserve/static/style.css
@@ -81,6 +81,12 @@
   padding: 0 8px;
 }
 
+.filter_dropdown {
+  /* display: flex;
+  flex-direction: column;
+  align-items: flex-end; */
+}
+
 .filter_bar {
   display: flex;
   justify-content: space-between;
